[package]
name = "minesweeper"
version = "0.1.0"
edition = "2024"


[dependencies]
dotenvy = "0.15.7"
rand = "0.9.2"
strum_macros = "0.27.2"

# [dependencies.bevy]
# version = "0.17.3"
# features = ["wayland"]

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
branch="release-0.18.0"
default-features = false
features=["2d"]